# twat-image

./: .cursorrules  CHANGELOG.md  CLAUDE.md  CLEANUP.txt  INSTALL.md  LOG.md  PLAN.md  README.md  RELEASE.md  REPO_CONTENT.txt  TASK.md  TODO.md  build.sh  dev.sh  install.sh  llms.txt  publish.sh  pyproject.toml  test-basic.sh
.cursor/rules/: 0project.mdc  color-processing-algorithms.mdc  delta-processing-system.mdc  filetree.mdc  image-similarity-algorithms.mdc  layer-composition-model.mdc
.giga/: specifications.json
.github/workflows/: ci.yml  push.yml  release.yml
.specstory/history/: 2025-03-08_16-40-comparison-of-sortpngs0-py-and-sortpngs2-py.md  2025-03-08_16-41-image-renaming-tool-development.md  2025-03-09_06-25-detailed-plan-and-code-annotation.md  2025-04-05_12-47-untitled.md  2025-04-05_13-19-shell-script-unbound-variable-error.md  2025-04-05_18-52-untitled.md
old/: img1inpaint  img2llm  img2vid  imgany2gray  imgcolortransfer  imgcrop  imgdedup  imggray2alpha  imgontowhite  imgoutcrop  imgpsdcollage  imgpsdlayers  imgquart  imgratio  imgrecanvas  imgrenmatch  imgrepalette  imgrepalette copy  imgs2layers  imgs2layers5  imgs2layers_bak  imgscale.py  imgsort0  imgsort2  imgsort3  imgsortsimi
old/imgproxyproc/: CHANGELOG.md  CLAUDE.md  PROGRESS.md  README.md  SPEC.md  TODO.md  create_test_image.py  imgproxyproc.py  simulate_processing.py  test_gradient_proxy_metadata.txt
scripts/: build.sh  release.sh  test-comprehensive.sh  test.sh
src/image_alpha_utils/: __init__.py  gray2alpha.py
src/twat_image/: __init__.py  __main__.py  genai.py  gray2alpha.py  operations.py
tests/: conftest.py  test_alpha_creation.py  test_benchmark.py  test_cli.py  test_color_parsing.py  test_core_processing.py  test_edge_cases.py  test_image_alpha_utils.py  test_normalization.py  test_operations.py  test_package.py  test_twat_image.py
