# this_file: pyproject.toml
# this_project: image_alpha_utils
# Build System Configuration
# -------------------------
# Specifies the build system and its requirements for packaging the project
# Specifies the build backend and its requirements for building the package
[build-system]
requires = [
    "hatchling>=1.27.0", # Core build backend for Hatch
    "hatch-vcs>=0.4.0", # Version Control System plugin for Hatch

]
build-backend = "hatchling.build" # Use Hatchling as the build backend

# Wheel build configuration
# Specifies which packages to include in the wheel distribution
[tool.hatch.build.targets.wheel]
packages = ["src/twat_image", "src/image_alpha_utils"]

# Project Metadata Configuration
# ------------------------------
# Comprehensive project description, requirements, and compatibility information
[project]
name = "twat-image"
dynamic = ["version"] # Version is determined dynamically from VCS
description = "A Python utility for converting images to include alpha channels based on grayscale values, and other image manipulations."
readme = "README.md"
requires-python = ">=3.10" # Minimum Python version required
license = "MIT"
keywords = ["image", "alpha", "graphics", "utility", "conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# Runtime Dependencies
# -------------------
# External packages required for the project to function
dependencies = [
    "fire",
    "numpy",
    "pillow",
]

# Project Authors
# ---------------
[[project.authors]]
name = "Adam Twardoch"
email = "adam+github@twardoch.com"

# Project URLs
# ------------
# Links to project resources for documentation, issues, and source code
[project.urls]
Documentation = "https://github.com/twardoch/image-alpha-utils#readme"
Issues = "https://github.com/twardoch/image-alpha-utils/issues"
Source = "https://github.com/twardoch/image-alpha-utils"

# Plugin Registration (Example - adjust if needed)
# -----------------------
# Registers this package as a plugin for a hypothetical host ecosystem
[project.entry-points."twat.plugins"]
image = "twat_image"

# Command-line scripts
# --------------------
[project.scripts]
twat-image            = "twat_image.__main__:main"
twat-image-version    = "twat_image.__main__:cmd_version"
twat-image-info       = "twat_image.__main__:cmd_info"
twat-image-gray2alpha = "twat_image.__main__:cmd_gray2alpha"
twat-image-convert    = "twat_image.__main__:cmd_convert"
twat-image-scale      = "twat_image.__main__:cmd_scale"
twat-image-crop       = "twat_image.__main__:cmd_crop"
twat-image-outcrop    = "twat_image.__main__:cmd_outcrop"
twat-image-normalize  = "twat_image.__main__:cmd_normalize"
twat-image-genai      = "twat_image.__main__:cmd_genai"
imagealpha            = "twat_image.gray2alpha:cli"

# Version configuration using VCS (Git)
[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"

# VCS hook configuration for version file generation
[tool.hatch.build.hooks.vcs]
version-file = "src/twat_image/__version__.py"

# Default development environment configuration
[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.3.4", # Testing framework
    "pytest-cov>=6.0.0", # Coverage reporting
    "mypy>=1.15.0", # Static type checker
    "ruff>=0.9.6", # Fast Python linter
]

# Scripts available in the default environment
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/twat_image --cov=tests {args:tests}"
type-check = "mypy src/twat_image tests"
lint = ["ruff check src/twat_image tests", "ruff format src/twat_image tests"]

# Python version matrix for testing
[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

# Linting environment configuration
[tool.hatch.envs.lint]
detached = true # Run in isolated environment
dependencies = [
    "mypy>=1.15.0", # Static type checker
    "ruff>=0.9.6", # Fast Python linter
    # Add project's direct runtime dependencies for MyPy analysis
    "fire",
    "numpy",
    "pillow",
    "types-Pillow",
    # pytest is needed for test file analysis by mypy if not already pulled in
    "pytest>=8.3.4",
]

# Linting environment scripts
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/twat_image tests}"
style = ["ruff check {args:.}", "ruff format {args:.}"]
fmt = ["ruff format {args:.}", "ruff check --fix {args:.}"]
all = ["style", "typing"]
# Ruff (linter) configuration
[tool.ruff]
target-version = "py310"
line-length = 120

# Ruff lint rules configuration
[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "ARG001",
    "ARG002",
    "ARG004",
    "ARG005",
    "B904",
    "C901",
    "DTZ005",
    "E501",
    "F401",
    "F811",
    "FBT001",
    "FBT002",
    "FBT003",
    "I001",
    "ISC001",
    "N803",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "S311",
    "S603",
    "S607",
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "fire",
    "webcolors"
]
ignore_missing_imports = true

# Coverage.py configuration for test coverage
[tool.coverage.run]
source_pkgs = ["twat_image", "tests"]
branch = true
parallel = true
# omit = ["src/image_alpha_utils/__about__.py"] # No __about__.py file exists

# Coverage path mappings
[tool.coverage.paths]
twat_image = ["src/twat_image", "*/twat-image/src/twat_image"]
tests = ["tests", "*/image-alpha-utils/tests"]

# Coverage report configuration
[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

# Optional dependencies
[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1", # For parallel test execution
    "pytest-benchmark[histogram]>=5.1.0", # For performance testing

]
dev = [
    "pre-commit>=4.1.0", # Git pre-commit hooks
    "ruff>=0.9.6", # Fast Python linter
    "mypy>=1.15.0", # Static type checker

]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]
all = [
    "twat>=1.8.1",
    "fire",
    "numpy",
    "pillow",
    "twat-fs[all]>=2.7.7",
]
# Test environment configuration
upload = [
    "twat-fs[all]>=2.7.7",
]
[tool.hatch.envs.test]
dependencies = [".[test]"]

# Test environment scripts
[tool.hatch.envs.test.scripts]
test = "python -m pytest -n auto {args:tests}"
test-cov = "python -m pytest -n auto --cov-report=term-missing --cov-config=pyproject.toml --cov=src/twat_image --cov=tests {args:tests}"
bench = "python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only"
bench-save = "python -m pytest -v -p no:briefcase tests/test_benchmark.py --benchmark-only --benchmark-json=benchmark/results.json"

# Pytest configuration
[tool.pytest.ini_options]
markers = [
    "benchmark: marks tests as benchmarks (select with '-m benchmark')",
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
    "slow: marks tests as slow (select with '-m slow')",
    "online: marks tests that require internet access",
    "requires_api_key: marks tests that require API keys",
]
addopts = "-v -p no:briefcase"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
asyncio_mode = "auto"

# Pytest-benchmark configuration
[tool.pytest-benchmark]
min_rounds = 100
min_time = 0.1
histogram = true
storage = "file"
save-data = true
compare = [
    "min", # Minimum time
    "max", # Maximum time
    "mean", # Mean time
    "stddev", # Standard deviation
    "median", # Median time
    "iqr", # Inter-quartile range
    "ops", # Operations per second
    "rounds", # Number of rounds

]
